<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/navi_user_background"
        android:layout_width="match_parent"
        android:contentDescription="@string/description_navi_user_background"
        android:layout_height="250dp"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/navi_user_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/description_navi_user_photo"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/navi_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:lines="1"
        android:paddingBottom="10dp"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>