<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="9dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/comment_user_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/comment_user_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxLines="1"
            android:text="@string/username"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_user_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:paddingBottom="3dp"
            android:text="@string/contents"
            android:textColor="@color/default_txt_color"
            android:textSize="14sp"
            />

    </LinearLayout>

    <ImageView
        android:contentDescription="@string/description_comment_user_image"
        android:id="@+id/comment_user_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:scaleType="fitXY" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="#E5E7E9" />
</RelativeLayout>
