<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackgroundBorderless"
    android:stateListAnimator="@drawable/item_story_selector"
    app:cardBackgroundColor="@android:color/white"
    app:cardPreventCornerOverlap="false"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="#F2F3F4"
            android:contentDescription="@string/description_story_image"
            android:scaleType="centerCrop" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="#99ffffff">

            <TextView
                android:id="@+id/story_comment_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/comment"
                android:textColor="@color/default_txt_color"
                android:textStyle="bold"
                app:layout_constraintRight_toLeftOf="@+id/story_like_count" />

            <TextView
                android:id="@+id/story_like_count"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:text="@string/like"
                android:textColor="@color/default_txt_color"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>

</android.support.v7.widget.CardView>
